Before changing app name.